<resources>
    <string name="app_name">PlayTime</string>
    <string name="navigation_peri">妹子</string>
    <string name="navigation_joke">段子</string>
    <string name="navigation_bored">无聊图</string>
    <string name="navigation_news">新鲜事</string>
    <string name="navigation_sweep">扫一扫</string>
    <string name="navigation_share">分享</string>
    <string name="navigation_robot">小智</string>
    <string name="navigation_setup">设置</string>
    <string name="navigation_gank">干货</string>
    <string name="navigation_android">Android</string>
    <string name="navigation_iOS">iOS</string>
    <string name="navigation_weal">福利</string>
    <string name="navigation_video">休息视频</string>
    <string name="navigation_jiandan">煎蛋</string>
    <string-array name="splash_title">
        <item>"持着干干净净的初衷,赶很远的路"</item>
        <item>"迷失的人迷失了,相逢的人会再相逢"</item>
        <item>"一个人不应当虚度一天的时光"</item>
        <item>"喜欢就在一起,别错过了相爱的最好时机"</item>
        <item>"无法忍受的痛苦就一笑置之"</item>
        <item>"抬起头,看到自己的希望"</item>
        <item>"在时间的长河里,波澜不惊"</item>
        <item>"每一条走上来的路,都有不得不跋涉的理由"</item>
        <item>"越是看起来简单,内心越丰盛"</item>
        <item>"踏实的学习,好好的积累"</item>
        <item>"一切都是马上经历"</item>
        <item>"是的,我很重要"</item>
        <item>"明白了生活,懂得了自己"</item>
        <item>"人生都是走着走着就开阔了"</item>
        <item>"不用在乎别人的评价"</item>
        <item>"把握每一天,享受每一天"</item>
        <item>"任何时候都可以开始做自己想做的事"</item>
        <item>"你只有足够努力,才能与你喜欢的更相配</item>
    </string-array>
    <!--layout所用 描述-->
    <string name="dest">描述</string>
    <string name="author">作者</string>
    <string name="time">时间</string>
    <string name="read_count">阅读数</string>
    <string name="comment_count">评论数</string>
</resources>
